plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// implementation 'org.springframework.security:spring-security-crypto'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	// Lettuce 클라이언트 (기본 클라이언트)
//	implementation 'io.lettuce.core:lettuce-core:6.4.1'
	// JWT 라이브러리 (jjwt)
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // API 정의 제공. jjwt 모듈 사용 시 기본적으로 필요
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5' // JWT의 실제 구현을 포함
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // Jackson을 통한 JWT의 직렬화 및 역직렬화 지원
	implementation 'org.springframework.boot:spring-boot-starter-validation' // Validation
	implementation 'net.coobird:thumbnailator:0.4.18'
	implementation 'commons-io:commons-io:2.11.0'
}


tasks.named('test') {
	useJUnitPlatform()
}
